# TARDIS

./: .gitignore  .readthedocs.yaml  Gudhi_Computational_Effort.rtf  LICENSE.md  README.md  Ripser_Computational_Effort.rtf  euclidicity_2D_wedged_spheres.py  euclidicity_PLH_multiscale_2Dsphere.py  euclidicity_PLH_multiscale_pinchedtorus.py  helper_functions.py  persistent_entropy_PLH.py  persistent_entropy_PLH_multiscale.py  persistent_entropy_PLH_multiscale_pinchedtorus.py  pyproject.toml  wedged_2_spheres_constant_locality.csv  wedged_spheres_euclidicity scores.csv
docs/source/: api.rst  conf.py  data.rst  index.rst  utils.rst
examples/: simple_numpy.py
output/: Gudhi_Computational_Effort.txt  Ripser_Computational_Effort.txt
plh/: analyse_euclidicity.py  cli.py  data.py  demo_pinched_torus.py  euclidicity.py  make_pinched_torus.py  make_wedged_spheres.py  mat_to_npy.py  persistent_homology.py  shapes.py
scripts/: es.sh  ipsc.sh  pinched_torus.sh  vision.sh  wedged_spheres.sh
tardis/: __init__.py  api.py  cli.py  euclidicity.py  make_wedged_spheres.py  make_wedged_spheres_varying_dim.py  shapes.py  utils.py
toast/: analyse_euclidicity.py  cli.py  euclidicity.py  make_wedged_spheres.py  make_wedged_spheres_varying_dim.py  persistent_homology.py  shapes.py  visualise_data.py
