[tool.poetry]
name = "plh"
version = "0.1.0"
description = "Persistent Local Homology for Singularity Analysis"
authors = ["Julius von Rohrscheidt <julius.rohrscheidt@helmholtz-muenchen.de>", "Bastian Rieck <bastian.rieck@helmholtz-muenchen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
gudhi = "^3.6.0"
numpy = "^1.23.2"
giotto-ph = "^0.2.2"
scikit-learn = "^1.1.2"
tqdm = "^4.64.1"
joblib = "^1.2.0"
colorlog = "^6.7.0"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
