[tool.poetry]
name = "toast"
version = "0.1.0"
description = "TOAST: Topological Algorithm for Singularity Tracking"
authors = ["Julius von Rohrscheidt <julius.rohrscheidt@helmholtz-muenchen.de>", "Bastian Rieck <bastian.rieck@helmholtz-muenchen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
gudhi = "^3.6.0"
numpy = "^1.23.2"
giotto-ph = "^0.2.2"
scikit-learn = "^1.1.2"
tqdm = "^4.64.1"
joblib = "^1.2.0"
colorlog = "^6.7.0"
pandas = "^1.5.0"
matplotlib = "^3.6.0"
seaborn = "^0.12.0"
torch = "^1.12.1"
torchvision = "^0.13.1"
scipy = "^1.9.1"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
